Added the HMTL structure of the project

--- a/index.html
+++ b/index.html
@@ -17,10 +17,35 @@
     <div class="container">
       <div class="display">
         <h1 class="title">Time arround the world</h1>
+        <div class="select-menu">
+          <select name="cities" id="cities">
+            <option value="">Select a city</option>
+            <option value="lisbon">Lisbon 🇵🇹</option>
+            <option value="madrid">Madrid 🇪🇸</option>
+            <option value="oslo">Oslo 🇳🇴</option>
+            <option value="new-york">New York 🇺🇸</option>
+            <option value="los-angeles">Los Angeles 🇺🇸</option>
+            <option value="sydney">Sydney 🇦🇺</option>
+            <option value="Auckland">Auckland 🇳🇿</option>
+            <option value="tokyo">Tokyo 🇯🇵</option>
+            <option value="seoul">Seoul 🇰🇷</option>
+            <option value="beijing">Beijing 🇨🇳</option>
+          </select>
+        </div>
+        <div class="card" style="width: 18rem">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Lisbon</li>
+            <li class="list-group-item">9 May 2023</li>
+          </ul>
+          <div class="card-footer">14:21h</div>
+        </div>
       </div>
     </div>
 
-    <footer>This was coded by Deborah Silva - check it on <a href="#" target="_blank">GitHub</a></footer>
+    <footer class="footer-section">
+      This was coded by Deborah Silva - check it on
+      <a href="#" target="_blank">GitHub</a>
+    </footer>
     <script src="javaScript/index.js"></script>
   </body>
 </html>
