--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="select-menu">
           <select class="form-select" name="cities-name" id="cities">
             <option value="">Select a city</option>
+            <option value="current">My current location</option>
             <option value="Europe/Lisbon">Lisbon 🇵🇹</option>
             <option value="Europe/Madrid">Madrid 🇪🇸</option>
             <option value="Europe/Oslo">Oslo 🇳🇴</option>
