set the default timezone to user's location

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="title">Time arround the world</h1>
         <div class="select-menu">
           <select class="form-select" name="cities-name" id="cities">
-            <option value="">Select a city</option>
+            <option value="" disabled>Select a city</option>
             <option value="current">My current location</option>
             <option value="Europe/Lisbon">Lisbon 🇵🇹</option>
             <option value="Europe/Madrid">Madrid 🇪🇸</option>
@@ -42,13 +42,9 @@
             style="width: 18rem"
           >
             <ul class="list-group list-group-flush">
-              <li class="list-group-item bg-transparent" id="city-name">
-                Lisbon
-              </li>
-              <li class="list-group-item bg-transparent" id="date">
-                9 May 2023
-              </li>
-              <li class="list-group-item bg-transparent" id="time">14:21h</li>
+              <li class="list-group-item bg-transparent" id="city-name"></li>
+              <li class="list-group-item bg-transparent" id="date"></li>
+              <li class="list-group-item bg-transparent" id="time"></li>
             </ul>
           </div>
         </div>
